fixed comments container overlap in project show

--- a/app/assets/stylesheets/pages/_projects.scss
+++ b/app/assets/stylesheets/pages/_projects.scss
@@ -139,7 +139,7 @@
 }
 
 .projects-show-container {
-  height: calc(100vh - 66px);
+  height: 800px;
   display: grid;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
